Fix spacing and padding

--- a/screen.css
+++ b/screen.css
@@ -24,7 +24,7 @@ h2 {
   line-height: 1.5107814em; /*44/29.124=1.5107814*/;
 }
 
-section {
+main > section {
   border-style: solid;
   border-width: 0.1666666em; /* 3/18= 0.1666666em */
   border-radius: 0.8333333em; /* 15/18= 0.8333333em */
@@ -56,7 +56,7 @@ label {
   display: inline-block;
 }
 
-input {
+input, label, select {
   margin-bottom: 0.55555em;
 }
 
@@ -87,7 +87,7 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 0.875em 0.888888em; /* 14/18=0.875em  16/18=0.888888 */
   text-decoration: none;
 }
 
